--- a/portal-frontend/src/app/features/edit-application/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-application/review-and-submit/review-and-submit.component.html
@@ -1,3 +1,12 @@
 <section>
   <app-application-details [$application]="$application"></app-application-details>
+  <div class="button-container">
+    <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
+    <div>
+      <button mat-stroked-button color="primary" (click)="onNavigateToStep(6)">
+        Previous<span class="mobile-hidden"> Step</span>
+      </button>
+      <button mat-flat-button color="primary" (click)="onSubmitToAlcs()">Submit</button>
+    </div>
+  </div>
 </section>
