--- a/portal-frontend/src/app/features/review-application/review-resolution/review-resolution.component.html
+++ b/portal-frontend/src/app/features/review-application/review-resolution/review-resolution.component.html
@@ -35,7 +35,7 @@
     </div>
   </form>
   <div class="button-container">
-    <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
+    <button (click)="onExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
       <button mat-stroked-button color="primary" (click)="onNavigateToStep(currentStep - 1)">
         Previous<span class="mobile-hidden"> Step</span>
