show primary contact validation error

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -41,6 +41,7 @@
       <app-primary-contact
         [$application]="$application"
         (navigateToStep)="onBeforeSwitchStep($event)"
+        [showValidationErrors]="showValidationErrors"
       ></app-primary-contact>
     </div>
   </cdk-step>
