--- a/portal-frontend/src/styles/buttons.scss
+++ b/portal-frontend/src/styles/buttons.scss
@@ -115,6 +115,10 @@
   border: rem(2) solid $error-color !important;
 }
 
+.mat-error {
+  border: rem(2) solid $error-color !important;
+}
+
 .mat-button-disabled {
   background-color: $grey !important;
   color: #fff !important;
