--- a/portal-frontend/src/app/features/review-application/review-contact-information/review-contact-information.component.html
+++ b/portal-frontend/src/app/features/review-application/review-contact-information/review-contact-information.component.html
@@ -2,8 +2,8 @@
   <h2>Contact Information</h2>
   <div>
     <div class="description">
-      <div *ngIf='isFirstNationGovernment'>Provide contact information for First Nation government staff</div>
-      <div *ngIf='!isFirstNationGovernment'>Provide contact information for Local government staff</div>
+      <div *ngIf="isFirstNationGovernment">Provide contact information for First Nation government staff</div>
+      <div *ngIf="!isFirstNationGovernment">Provide contact information for Local government staff</div>
       <div>
         <button class="save-button" (click)="onSave()" mat-flat-button color="primary">Save Progress</button>
       </div>
@@ -11,8 +11,8 @@
     <form [formGroup]="contactForm">
       <div class="form-row">
         <div class="full-row">
-          <label *ngIf='isFirstNationGovernment' for="lg-file-number">First Nation Government File Number</label>
-          <label *ngIf='!isFirstNationGovernment' for="lg-file-number">Local Government File Number</label>
+          <label *ngIf="isFirstNationGovernment" for="lg-file-number">First Nation Government File Number</label>
+          <label *ngIf="!isFirstNationGovernment" for="lg-file-number">Local Government File Number</label>
           <mat-form-field class="input" appearance="outline">
             <input id="lg-file-number" matInput placeholder="Type file number" formControlName="lgFileNumber" />
           </mat-form-field>
@@ -56,10 +56,10 @@
       </div>
     </form>
     <div class="button-container">
-      <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
+      <button mat-stroked-button color="accent" (click)="onExit()">Save and Exit</button>
       <div>
-        <div></div>
-        <button (click)="onSave()" mat-flat-button matStepperNext color="primary">
+        <div><!--this is required for correct responsive view --></div>
+        <button mat-flat-button color="primary" (click)="onNavigateToStep(currentStep + 1)">
           Next<span class="mobile-hidden"> Step</span>
         </button>
       </div>
