Show errors when navigating from Step 8 to Previous Step

--- a/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
@@ -101,7 +101,7 @@
         onto the property, including gravel for construction.
       </label>
       <mat-button-toggle-group
-        (change)="onChangeFill($event)"
+        (change)="onChangeFill($event.value)"
         class="input"
         id="will-import-fill"
         formControlName="willImportFill"
