--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -46,6 +46,7 @@
             [enableCertificateOfTitleUpload]="false"
             [enableUserSignOff]="false"
             [enableAddNewOwner]="false"
+            [showErrors]='showErrors'
             [disabled]="formDisabled"
             (onFormGroupChange)="onParcelFormChange($event)"
           ></app-parcel-entry>
