--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
@@ -19,6 +19,7 @@
       [parcel]="parcel"
       [$owners]="$owners"
       [fileId]="fileId"
+      [showErrors]='showErrors'
       (onFormGroupChange)="onParcelFormChange($event)"
       (onFilesUpdated)="onFilesUpdated()"
       (onOwnersUpdated)="onOwnersUpdated()"
