Add new error messages for Applicants
* ALCS-452 - Add error message for missing owners on Parcel entry
* ALCS-453 - Make government red when it is not valid

--- a/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
@@ -26,7 +26,10 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
-      <div *ngIf="localGovernment.invalid && (localGovernment.dirty || localGovernment.touched)" class="field-error">
+      <div
+        *ngIf="localGovernment.errors && localGovernment.errors['required'] && (localGovernment.dirty || localGovernment.touched)"
+        class="field-error"
+      >
         <mat-icon>warning</mat-icon>
         <div *ngIf="localGovernment.errors?.['required']">This field is required</div>
       </div>
